examples/negative/effects/row_carrier_leak.kai
# Issue #773 — the soundness gate. A nominal carrier with an effect-row
# parameter (`Stream[t, e]`) must thread its row: an effectful producer
# consumed in a PURE `main` is rejected, not silently accepted. Before
# the fix the head slot was a phantom type var, so the `Tick` effect of
# the producer leaked uncheck (`main` compiled clean — a soundness hole).
# This fixture pins that the effect now escapes to `main`'s row and, with
# `main` pure, the typer rejects it.
#
# NOTE: a selfhost byte-id pass is FALSE-GREEN for this fix (the compiler
# itself declares no nominal effect-row carrier); this negative fixture
# is the gate that actually distinguishes "row threads" from "row leaks".

import stream

effect Tick { tick() : Unit }

fn gen(yield: (Int) -> Bool / Tick) : Unit / Tick = {
  Tick.tick()
  let _ = yield(1)
  ()
}

fn main() : Unit = {
  let s = Stream(gen)
  stream.each(s, (_n) => ())
}
